--- a/step6/styles.css
+++ b/step6/styles.css
@@ -1,3 +1,4 @@
+/* Group Members: Vivek Govindu, Ethan Lozuke, Will Gibson, Oliver Finnamore, Seth Lamay */
 #main-title {
     text-align: center;
     font-family: Verdana;
